ファイルを整理。

--- a/dev/ejs/ejs-template.ejs
+++ b/dev/ejs/ejs-template.ejs
@@ -1,5 +1,6 @@
 <%
 var title = "ページのタイトルとか";
+var keywords = "キーワード";
 var description = "ディスクリプション";
 %>
 
@@ -8,7 +9,7 @@ var description = "ディスクリプション";
 <% include common/_header %>
 
 <div id="main">
-PCのトップページの内容
+PCのページの内容
 </div>
 
 <% include common/_footer %>
@@ -21,7 +22,7 @@ PCのトップページの内容
 <% include common/_header-sp %>
 
 <div id="main">
-SPのトップページの内容
+SPのページの内容
 </div>
 
 <% include common/_footer-sp %>
