--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -7,24 +7,24 @@
 
 #header {
 }
-.header_logo {
-}
-.header_menu {
-}
 
-/* Main Nav
+/* Global Nav
 ---------------------------------------*/
 
 .gnav {
 }
 
-
 /* Footer
 ---------------------------------------*/
 
-
 #footer {
 }
+
 .copyright {
 }
 
+/* Main
+---------------------------------------*/
+
+#main {
+}
