--- a/dev/ejs/common/_header.ejs
+++ b/dev/ejs/common/_header.ejs
@@ -3,9 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title><%= title %></title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="<%= keywords %>">
 <meta name="description" content="<%= description %>">
+<meta property="og:locale" content="ja_JP">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="">
 <meta property="og:title" content="<%= title %>">
+<meta property="og:url" content="">
 <meta property="og:description" content="<%= description %>">
+<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="apple-touch-icon" href="images/home-icon.png">
+<link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 
 <body>
