jsのコンパイルのタスクを追加

--- a/dev/scss/_setting.scss
+++ b/dev/scss/_setting.scss
@@ -10,7 +10,7 @@ body, input, select, textarea {
   font-family: Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
 body {
-  background: $brand-base;
+  background: $color-brand;
   color: #666;
   text-align: left;
   line-height:1.7;
