--- a/htdocs/css/styles.css
+++ b/htdocs/css/styles.css
@@ -1,6 +1,6 @@
 @charset 'UTF-8';
 /*==========================================================================*/
-/*  Reset Css 
+/*  Reset Css
 /*==========================================================================*/
 /* Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
 html , body , div , span , applet , object , iframe , h1 , h2 , h3 , h4 , h5 , h6 , p , blockquote , pre , a , abbr , acronym , address , big , cite , code , del , dfn , em , img , ins , kbd , q , s , samp , small , strike , strong , sub , sup , tt , var , b , u , i , center , dl , dt , dd , ol , ul , li , fieldset , form , label , legend , table , caption , tbody , tfoot , thead , tr , th , td , article , aside , canvas , details , embed , figure , figcaption , footer , header , hgroup , menu , nav , output , ruby , section , summary , time , mark , audio , video {
@@ -167,9 +167,11 @@ a:hover , a:active {
 /*==========================================================================*/
 /* Header
 ---------------------------------------*/
-/* Main Nav
+/* Global Nav
 ---------------------------------------*/
 /* Footer
+---------------------------------------*/
+/* Main
 ---------------------------------------*/
 /*==========================================================================*/
 /*  TopPage
