--- a/dev/scss/_setting.scss
+++ b/dev/scss/_setting.scss
@@ -10,8 +10,8 @@ body, input, select, textarea {
   font-family: Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
 body {
-  background: $color-brand;
-  color: #666;
+  background: $color-bg;
+  color: #333;
   text-align: left;
   line-height:1.7;
 }
