--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,16 +1,33 @@
 @charset "utf-8";
 
+/*========================================*/
+/* Foundation
+/*========================================*/
 @import "variables";
 @import "reset";
 @import "setting";
+
+/*========================================*/
+/*  Component
+/*========================================*/
+
+
+/*========================================*/
+/*  Utility
+/*========================================*/
+
+
+/*========================================*/
+/* Rayout
+/*========================================*/
+
 @import "layout";
+
+/*========================================*/
+/*  Page
+/*========================================*/
+
 @import "home";
-
-
-/*==========================================================================*/
-/*
-/*==========================================================================*/
-
 
 
 
