--- a/dev/scss/_home.scss
+++ b/dev/scss/_home.scss
@@ -1,5 +1,2 @@
-
-/*==========================================================================*/
-/*  TopPage
-/*==========================================================================*/
-
+/* TopPage
+---------------------------------------*/
