--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -1,30 +1,31 @@
-/*==========================================================================*/
-/*  Base Rayout
-/*==========================================================================*/
-
 /* Header
 ---------------------------------------*/
 
-#header {
+.header {
 }
-
-/* Global Nav
----------------------------------------*/
 
 .gnav {
 }
 
+
 /* Footer
 ---------------------------------------*/
 
-#footer {
+.footer {
 }
 
 .copyright {
 }
 
+
+/* SideNav
+---------------------------------------*/
+
+.sidenav {
+}
+
 /* Main
 ---------------------------------------*/
 
-#main {
+.main {
 }
