[mod] sassファイルを構造化

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -3,19 +3,10 @@
 /*========================================*/
 /* Foundation
 /*========================================*/
-@import "variables";
-@import "reset";
-@import "setting";
 
-/*========================================*/
-/*  Component
-/*========================================*/
-
-
-/*========================================*/
-/*  Utility
-/*========================================*/
-
+@import "base/variables";
+@import "base/reset";
+@import "base/setting";
 
 /*========================================*/
 /* Rayout
@@ -24,11 +15,13 @@
 @import "layout";
 
 /*========================================*/
+/*  Module
+/*========================================*/
+
+
+
+/*========================================*/
 /*  Page
 /*========================================*/
 
 @import "home";
-
-
-
-
