--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,6 +1,12 @@
 @charset "utf-8";
 
 /*========================================*/
+/* Mixin
+/*========================================*/
+
+@import "bourbon/bourbon";
+
+/*========================================*/
 /* Foundation
 /*========================================*/
 
@@ -12,7 +18,7 @@
 /* Rayout
 /*========================================*/
 
-@import "layout";
+@import "layout/layout";
 
 /*========================================*/
 /*  Module
