--- a/dev/scss/base/_setting.scss
+++ b/dev/scss/base/_setting.scss
@@ -3,7 +3,8 @@
 ---------------------------------------*/
 
 html {
-  font-size: 62.5%;
+  // font-size: 62.5%;
+  font-size: 10px;
   background: none;
 }
 body, input, select, textarea {
@@ -11,59 +12,44 @@ body, input, select, textarea {
 }
 body {
   background: $color-bg-body;
-  color: #333;
+  color: $color-secondary;
   text-align: left;
+  // todo 説明
   line-height:1.7;
   font-size: 1.4rem;
+  // todo 説明
+  -webkit-text-size-adjust: 100%;
 }
 h1 , h2 , h3 , h4 , h5 , h6 {
+  // todo 説明
   line-height : 1.4;
 }
-input, button, textarea, select, p, blockquote, table, pre, address, ul, ol, dl {
-  font-size: 100%;
+img {
+    // todo 説明
+    vertical-align: top;
+    max-width: 100%;
+    height: auto;
 }
-img { vertical-align: bottom; max-width: 100%; height: auto;}
-address { font-style: normal; line-height: 1.0; }
 strong { font-weight: bold; }
 em { font-style: italic;}
-a { text-decoration: none; color: #666; transition: all .5s;}
-a:hover,
-a:active { text-decoration: none; opacity: 0.7; }
+a {
+    text-decoration: none;
+    color: $color-link;
+    transition: all .3s;
+}
 
+// todo 説明
+@media print, screen and (min-width: $lg) {
+    a:hover {
+        opacity: 0.6;
+    }
+}
+
+// todo 説明
 * {
   box-sizing: border-box;
 }
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-/*--------------------------------------
-  General-Styles
----------------------------------------*/
-
-/* ---- Clearfix ---- */
-.clear { clear: both; }
-.cf:before,.cf:after { content: " "; display: table; }
-.cf:after { clear: both; }
-.cf { *zoom: 1; }
-
-.fl     { float: left; }
-.fr     { float: right;}
-.left   { text-align: left; }
-.center { text-align: center; }
-.right  { text-align: right; }
-.middle { vertical-align: middle;}
-.hidden { overflow: hidden; }
-
-@media (max-width: $sp) {
-  .sp_none {
-    display : none;
-  }
-}
-
-@media (min-width: $tablet) {
-  .pc_none {
-    display : none;
-  }
 }
