--- a/dev/ejs-template.ejs
+++ b/dev/ejs-template.ejs
@@ -1,9 +1,12 @@
-<%
-var title = "ページのタイトルとか";
-var keywords = "キーワード";
-var description = "ディスクリプション";
+<% var page = {
+  title : "ページのタイトル" + site.name,
+  keywords : "キーワード",
+  desc : "ディスクリプション",
+  id : "home",
+  url: site.url + ""
+} %><%
+include ejs/common/_header
 %>
-<% include ejs/common/_header %>
 
 <div id="main">
 ページの内容
