--- a/dev/assets/scss/base/_setting.scss
+++ b/dev/assets/scss/base/_setting.scss
@@ -5,7 +5,6 @@
 html {
   // font-size: 62.5%;
   font-size: 10px;
-  background: none;
 }
 body, input, select, textarea {
   font-family: Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
@@ -35,11 +34,11 @@ em { font-style: italic;}
 a {
     text-decoration: none;
     color: $color-link;
-    transition: all .3s;
+    transition: opacity .3s;
 }
 
 // todo 説明
-@media print, screen and (min-width: $lg) {
+@media print, screen and (min-width: $lg-min) {
     a:hover {
         opacity: 0.6;
     }
