mod:セッティング用のCSSファイルに追記

--- a/dev/assets/scss/base/_reset.scss
+++ b/dev/assets/scss/base/_reset.scss
@@ -4,7 +4,7 @@
 
 // Eric Meyer'sのreset CSSをベースに不要なタグなどを削除
 // Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, address, code, em, img, small, strong, dl, dt, dd, ol, ul, li, form, label, table, tbody, tfoot, thead, tr, th, td, article, aside, canvas, embed, figure, figcaption, footer, header, nav, section, summary, time, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, address, code, em, img, small, strong, dl, dt, dd, ol, ul, li, form, label, table, tbody, tfoot, thead, tr, th, td, article, aside, canvas, embed, figure, figcaption, footer, header, nav, section, summary, time, audio, video, {
   border : 0;
   //font : inherit;
   font-size : 100%;
