--- a/dev/assets/scss/styles.scss
+++ b/dev/assets/scss/styles.scss
@@ -16,7 +16,7 @@
 @import "base/setting";
 
 /*========================================*/
-/* Rayout
+/* Layout
 /*========================================*/
 
 @import "layout/layout";
