--- a/dev/assets/scss/base/_setting.scss
+++ b/dev/assets/scss/base/_setting.scss
@@ -3,31 +3,39 @@
 ---------------------------------------*/
 
 html {
-  // font-size: 62.5%;
-  font-size: 10px;
+    // font-size: 62.5%;
+    font-size: 10px;
 }
-body, input, select, textarea {
-  font-family: Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
+body, input, button, select, textarea {
+    font-family: Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
 body {
-  background: $color-bg-body;
-  color: $color-secondary;
-  text-align: left;
-  // todo 説明
-  line-height:1.7;
-  font-size: 1.4rem;
-  // todo 説明
-  -webkit-text-size-adjust: 100%;
+    background: $color-bg-body;
+    color: $color-secondary;
+    text-align: left;
+    line-height:1.7;
+    font-size: 1.4rem;
+    -webkit-text-size-adjust: 100%;  // デバイスの向きによって文字サイズが変更されないようにする
 }
 h1 , h2 , h3 , h4 , h5 , h6 {
-  // todo 説明
-  line-height : 1.4;
+    line-height : 1.4;  // 見出し系はパラつくので見えるので行間を少し狭める
 }
 img {
-    // todo 説明
-    vertical-align: top;
+    vertical-align: top;  // imgで意図しないマージンがつかないように設定
     max-width: 100%;
     height: auto;
+}
+// フォーム要素のデフォルトスタイルを削除
+input, button, textarea, select {
+    -webkit-appearance: none;  // iOSのSafariはクセが強いのでデフォルトで削除
+    // -moz-appearance: none;
+    // appearance: none;
+    margin: 0;
+    padding: 0;
+    // background: none;
+    // border: none;
+    // border-radius: 0;
+    // outline: none;
 }
 strong { font-weight: bold; }
 em { font-style: italic;}
@@ -36,15 +44,14 @@ a {
     color: $color-link;
     transition: opacity .3s;
 }
-
-// todo 説明
+// 画面サイズが大きい(PC想定)の時のみホバーを適用
+// iOS8.4.1で2回タップしないとリンク先に遷移しない問題対策
 @media print, screen and (min-width: $lg-min) {
     a:hover {
         opacity: 0.6;
     }
 }
-
-// todo 説明
+// デフォルトのボックスモデルをボーダーボックスに変更
 * {
   box-sizing: border-box;
 }
