mod: ejsテンプレファイル名変更 / cssのコメント変更

--- a/dev/assets/scss/base/_reset.scss
+++ b/dev/assets/scss/base/_reset.scss
@@ -1,6 +1,6 @@
-/*==========================================================================*/
-/*  Reset Css
-/*==========================================================================*/
+/*--------------------------------------
+  Reset Css
+---------------------------------------*/
 
 // Eric Meyer'sのreset CSSをベースに不要なタグなどを削除
 // Eric Meyer's Reset CSS v2.0 - http://cssreset.com */
