--- a/dev/assets/scss/base/_variables.scss
+++ b/dev/assets/scss/base/_variables.scss
@@ -6,6 +6,12 @@ $color-secondary : #333;
 $color-link : #666;
 $color-bg-body : #fff;
 
+// Font
+// --------------------------------------------------
+
+$font-gothic : Helvetica,Arial,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','游ゴシック体',YuGothic,'メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif
+$font-mincho : 'Palatino Linotype','游明朝',YuMincho,'ヒラギノ明朝 ProN W3','Hiragino Mincho ProN','HG明朝E','ＭＳ Ｐ明朝','ＭＳ 明朝',serif;
+
 
 //$color-xx : #fff;
 
