--- a/dev/ejs-template.ejs
+++ b/dev/ejs-template.ejs
@@ -5,11 +5,11 @@
   id : "home",
   url: site.url + ""
 } %><%
-include ejs/common/_header
+include ejs/common_header
 %>
 
 <main id="main">
 ページの内容
 </main>
 
-<% include ejs/common/_footer %>
+<% include ejs/common_footer %>
