--- a/dev/ejs/common_header.ejs
+++ b/dev/ejs/common_header.ejs
@@ -2,7 +2,6 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title><%= page.title %></title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- 半レスポンシブの場合 -->
@@ -19,6 +18,7 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- レスポンシブの場合 -->
 
+<title><%= page.title %></title>
 <meta name="keywords" content="<%= page.keywords %>">
 <meta name="description" content="<%= page.desc %>">
 <meta property="og:locale" content="ja_JP">
@@ -28,6 +28,10 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <meta property="og:url" content="<%= page.url %>">
 <meta property="og:description" content="<%= page.desc %>">
 <meta property="og:image" content="<% if(page.ogimg){ %><%= site.url + page.ogimg %><% } else { %><%= site.url %>images/ogp.png<% } %>">
+
+<!-- 連続した数字があると誤認識してしまうので、電話番号の自動リンク機能は停止 -->
+<meta name="format-detection" content="telephone=no">
+
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="apple-touch-icon" href="/images/home-icon.png">
