ファイルの整理

--- a/dev/index.ejs
+++ b/dev/index.ejs
@@ -5,11 +5,11 @@
   id : "home",
   url: site.url + ""
 } %><%
-include ejs/common_header
+include inc/common_header
 %>
 
 <main id="main">
 ページの内容
 </main>
 
-<% include ejs/common_footer %>
+<% include inc/common_footer %>
