--- a/dev/inc/common_header.ejs
+++ b/dev/inc/common_header.ejs
@@ -32,16 +32,22 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 <!-- 連続した数字があると誤認識してしまうので、電話番号の自動リンク機能は停止 -->
 <meta name="format-detection" content="telephone=no">
 
+<!-- Favicon -->
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="apple-touch-icon" href="/images/home-icon.png">
-<link rel="stylesheet" href="/css/styles.css">
+
+<!-- Favicon -->
+<link rel="stylesheet" href="/assets/css/styles.css">
 <link rel="canonical" href="<%= page.url %>">
 <link rel="alternate" media="only screen and (max-width: 640px)" href="">
+
 </head>
 
 <body>
 
-<header>
+<div id="wrapper">
+
+<header class="l-header">
 ヘッダー
-</header><!-- #header -->
+</header>
