ejs処理を修正

--- a/dev/index.ejs
+++ b/dev/index.ejs
@@ -5,11 +5,11 @@
   id : "home",
   url: site.url + ""
 } %><%
-include inc/common_header
+include inc/_common_header
 %>
 
 <main id="main">
 ページの内容
 </main>
 
-<% include inc/common_footer %>
+<% include inc/_common_footer %>
