--- a/dev/assets/scss/module/_grid.scss
+++ b/dev/assets/scss/module/_grid.scss
@@ -1,90 +1,249 @@
-/* ---- grid ---- */
 
-.grid-row {
-  @include clearfix;
+
+.l-grid {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
 }
 
-.grid-col {
-  float: left;
-  img {
-      width: 100%;
-  }
+// ------------------------------------------
+// グリッド幅の設定
+// ------------------------------------------
+
+.col-xs-1 { width: 8.333%; }
+.col-xs-2 { width: 16.666%; }
+.col-xs-3 { width: 25%; }
+.col-xs-4 { width: 33.333%; }
+.col-xs-5 { width: 41.666%; }
+.col-xs-6 { width: 50%; }
+.col-xs-7 { width: 58.333%; }
+.col-xs-8 { width: 66.666%; }
+.col-xs-9 { width: 75%; }
+.col-xs-10 { width: 83.333%; }
+.col-xs-11 { width: 91.666%; }
+.col-xs-12 { width: 100%; }
+
+@media print, screen and (min-width: $sm-min) {
+.col-sm-1 { width: 8.333%; }
+.col-sm-2 { width: 16.666%; }
+.col-sm-3 { width: 25%; }
+.col-sm-4 { width: 33.333%; }
+.col-sm-5 { width: 41.666%; }
+.col-sm-6 { width: 50%; }
+.col-sm-7 { width: 58.333%; }
+.col-sm-8 { width: 66.666%; }
+.col-sm-9 { width: 75%; }
+.col-sm-10 { width: 83.333%; }
+.col-sm-11 { width: 91.666%; }
+.col-sm-12 { width: 100%; }
 }
 
-.grid-row {
-    margin-right: -10px;
-    margin-left: -10px;
+@media print, screen and (min-width: $md-min) {
+.col-md-1 { width: 8.333%; }
+.col-md-2 { width: 16.666%; }
+.col-md-3 { width: 25%; }
+.col-md-4 { width: 33.333%; }
+.col-md-5 { width: 41.666%; }
+.col-md-6 { width: 50%; }
+.col-md-7 { width: 58.333%; }
+.col-md-8 { width: 66.666%; }
+.col-md-9 { width: 75%; }
+.col-md-10 { width: 83.333%; }
+.col-md-11 { width: 91.666%; }
+.col-md-12 { width: 100%; }
 }
-.grid-col {
-    padding: 0 10px;
-    .grid--s-1 & {
-        width: 100%;
+
+@media print, screen and (min-width: $lg-min) {
+.col-lg-1 { width: 8.333%; }
+.col-lg-2 { width: 16.666%; }
+.col-lg-3 { width: 25%; }
+.col-lg-4 { width: 33.333%; }
+.col-lg-5 { width: 41.666%; }
+.col-lg-6 { width: 50%; }
+.col-lg-7 { width: 58.333%; }
+.col-lg-8 { width: 66.666%; }
+.col-lg-9 { width: 75%; }
+.col-lg-10 { width: 83.333%; }
+.col-lg-11 { width: 91.666%; }
+.col-lg-12 { width: 100%; }
+}
+
+
+// ------------------------------------------
+// 左右の余白の設定
+// ------------------------------------------
+
+.l-grid {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+.l-grid_col {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+// @media print, screen and (min-width: $sm-min) {
+//     .l-grid {
+//         margin-left: -15px;
+//         margin-right: -15px;
+//     }
+//     .l-grid_col {
+//         padding-left: 15px;
+//         padding-right: 15px;
+//     }
+// }
+
+@media print, screen and (min-width: $md-min) {
+    .l-grid {
+        margin-left: -12px;
+        margin-right: -12px;
     }
-    .grid--s-2 & {
-        width: 50%;
+    .l-grid_col {
+        padding-left: 12px;
+        padding-right: 12px;
     }
-    .grid--s-3 & {
-        width: 33.3%;
+}
+
+@media print, screen and (min-width: $lg-min) {
+    .l-grid {
+        margin-left: -15px;
+        margin-right: -15px;
     }
-    .grid--s-4 & {
-        width: 25%;
+    .l-grid_col {
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 
 
-@media screen and (max-width: 767px) {
-    .grid--s-1 .grid-col:nth-child(n+2),
-    .grid--s-2 .grid-col:nth-child(n+3),
-    .grid--s-3 .grid-col:nth-child(n+4),
-    .grid--s-4 .grid-col:nth-child(n+5){
+// ------------------------------------------
+// 上下の余白の設定
+// ------------------------------------------
+
+
+.grid-xs-1col > .l-grid_col:nth-child(n+2),
+.grid-xs-2col > .l-grid_col:nth-child(n+3),
+.grid-xs-3col > .l-grid_col:nth-child(n+4),
+.grid-xs-4col > .l-grid_col:nth-child(n+5),
+.grid-xs-5col > .l-grid_col:nth-child(n+6),
+.grid-xs-6col > .l-grid_col:nth-child(n+7),
+.grid-xs-7col > .l-grid_col:nth-child(n+8),
+.grid-xs-8col > .l-grid_col:nth-child(n+9),
+.grid-xs-9col > .l-grid_col:nth-child(n+10),
+.grid-xs-10col > .l-grid_col:nth-child(n+11),
+.grid-xs-11col > .l-grid_col:nth-child(n+12),
+.grid-xs-12col > .l-grid_col:nth-child(n+13) {
+    margin-top: 20px;
+}
+
+@media print, screen and (min-width: $sm-min) {
+    .grid-sm-1col > .l-grid_col:nth-child(-n+2),
+    .grid-sm-2col > .l-grid_col:nth-child(-n+3),
+    .grid-sm-3col > .l-grid_col:nth-child(-n+4),
+    .grid-sm-4col > .l-grid_col:nth-child(-n+5),
+    .grid-sm-5col > .l-grid_col:nth-child(-n+6),
+    .grid-sm-6col > .l-grid_col:nth-child(-n+7),
+    .grid-sm-7col > .l-grid_col:nth-child(-n+8),
+    .grid-sm-8col > .l-grid_col:nth-child(-n+9),
+    .grid-sm-9col > .l-grid_col:nth-child(-n+10),
+    .grid-sm-10col > .l-grid_col:nth-child(-n+11),
+    .grid-sm-11col > .l-grid_col:nth-child(-n+12),
+    .grid-sm-12col > .l-grid_col:nth-child(-n+13) {
+        margin-top: 0;
+    }
+    .grid-sm-1col > .l-grid_col:nth-child(n+2),
+    .grid-sm-2col > .l-grid_col:nth-child(n+3),
+    .grid-sm-3col > .l-grid_col:nth-child(n+4),
+    .grid-sm-4col > .l-grid_col:nth-child(n+5),
+    .grid-sm-5col > .l-grid_col:nth-child(n+6),
+    .grid-sm-6col > .l-grid_col:nth-child(n+7),
+    .grid-sm-7col > .l-grid_col:nth-child(n+8),
+    .grid-sm-8col > .l-grid_col:nth-child(n+9),
+    .grid-sm-9col > .l-grid_col:nth-child(n+10),
+    .grid-sm-10col > .l-grid_col:nth-child(n+11),
+    .grid-sm-11col > .l-grid_col:nth-child(n+12),
+    .grid-sm-12col > .l-grid_col:nth-child(n+13) {
         margin-top: 20px;
     }
+}
 
-    .grid--s-1 .grid-col,
-    .grid--s-2 .grid-col:nth-child(odd),
-    .grid--s-3 .grid-col:nth-child(3n+1),
-    .grid--s-4 .grid-col:nth-child(4n+1){
-        clear: both;
+@media print, screen and (min-width: $md-min) {
+    .grid-md-1col > .l-grid_col:nth-child(-n+2),
+    .grid-md-2col > .l-grid_col:nth-child(-n+3),
+    .grid-md-3col > .l-grid_col:nth-child(-n+4),
+    .grid-md-4col > .l-grid_col:nth-child(-n+5),
+    .grid-md-5col > .l-grid_col:nth-child(-n+6),
+    .grid-md-6col > .l-grid_col:nth-child(-n+7),
+    .grid-md-7col > .l-grid_col:nth-child(-n+8),
+    .grid-md-8col > .l-grid_col:nth-child(-n+9),
+    .grid-md-9col > .l-grid_col:nth-child(-n+10),
+    .grid-md-10col > .l-grid_col:nth-child(-n+11),
+    .grid-md-11col > .l-grid_col:nth-child(-n+12),
+    .grid-md-12col > .l-grid_col:nth-child(-n+13) {
+        margin-top: 0;
+    }
+    .grid-md-1col > .l-grid_col:nth-child(n+2),
+    .grid-md-2col > .l-grid_col:nth-child(n+3),
+    .grid-md-3col > .l-grid_col:nth-child(n+4),
+    .grid-md-4col > .l-grid_col:nth-child(n+5),
+    .grid-md-5col > .l-grid_col:nth-child(n+6),
+    .grid-md-6col > .l-grid_col:nth-child(n+7),
+    .grid-md-7col > .l-grid_col:nth-child(n+8),
+    .grid-md-8col > .l-grid_col:nth-child(n+9),
+    .grid-md-9col > .l-grid_col:nth-child(n+10),
+    .grid-md-10col > .l-grid_col:nth-child(n+11),
+    .grid-md-11col > .l-grid_col:nth-child(n+12),
+    .grid-md-12col > .l-grid_col:nth-child(n+13) {
+        margin-top: 40px;
+    }
+}
+
+@media print, screen and (min-width: $lg-min) {
+    .grid-lg-1col > .l-grid_col:nth-child(-n+2),
+    .grid-lg-2col > .l-grid_col:nth-child(-n+3),
+    .grid-lg-3col > .l-grid_col:nth-child(-n+4),
+    .grid-lg-4col > .l-grid_col:nth-child(-n+5),
+    .grid-lg-5col > .l-grid_col:nth-child(-n+6),
+    .grid-lg-6col > .l-grid_col:nth-child(-n+7),
+    .grid-lg-7col > .l-grid_col:nth-child(-n+8),
+    .grid-lg-8col > .l-grid_col:nth-child(-n+9),
+    .grid-lg-9col > .l-grid_col:nth-child(-n+10),
+    .grid-lg-10col > .l-grid_col:nth-child(-n+11),
+    .grid-lg-11col > .l-grid_col:nth-child(-n+12),
+    .grid-lg-12col > .l-grid_col:nth-child(-n+13) {
+        margin-top: 0;
+    }
+    .grid-lg-1col > .l-grid_col:nth-child(n+2),
+    .grid-lg-2col > .l-grid_col:nth-child(n+3),
+    .grid-lg-3col > .l-grid_col:nth-child(n+4),
+    .grid-lg-4col > .l-grid_col:nth-child(n+5),
+    .grid-lg-5col > .l-grid_col:nth-child(n+6),
+    .grid-lg-6col > .l-grid_col:nth-child(n+7),
+    .grid-lg-7col > .l-grid_col:nth-child(n+8),
+    .grid-lg-8col > .l-grid_col:nth-child(n+9),
+    .grid-lg-9col > .l-grid_col:nth-child(n+10),
+    .grid-lg-10col > .l-grid_col:nth-child(n+11),
+    .grid-lg-11col > .l-grid_col:nth-child(n+12),
+    .grid-lg-12col > .l-grid_col:nth-child(n+13) {
+        margin-top: 40px;
+    }
+}
+
+// ------------------------------------------
+// その他
+// ------------------------------------------
+
+.l-grid_col img {
+    width: 100%;
+    max-width: auto;
+}
+
+.l-grid_col.img-center {
+    text-align: center;
+    img {
+        width: auto;
+        max-width: 100%;
     }
 }
 
 
-@media print, screen and (min-width: 768px) {
-    .grid-row {
-        margin-right: -15px;
-        margin-left: -15px;
-    }
-    .grid-col {
-        padding: 0 15px;
-        .grid--l-1 & {
-            width: 100%;
-        }
-        .grid--l-2 & {
-            width: 50%;
-        }
-        .grid--l-3 & {
-            width: 33.3%;
-        }
-        .grid--l-4 & {
-            width: 25%;
-        }
-        .grid--l-5 & {
-            width: 20%;
-        }
-    }
-
-    .grid--l-1 .grid-col:nth-child(n+2),
-    .grid--l-2 .grid-col:nth-child(n+3),
-    .grid--l-3 .grid-col:nth-child(n+4),
-    .grid--l-4 .grid-col:nth-child(n+5){
-        margin-top: 30px;
-    }
-
-    .grid--l-1 .grid-col,
-    .grid--l-2 .grid-col:nth-child(2n+1),
-    .grid--l-3 .grid-col:nth-child(3n+1),
-    .grid--l-4 .grid-col:nth-child(4n+1),
-    .grid--l-5 .grid-col:nth-child(5n+1){
-        clear: both;
-    }
-}
