--- a/hologram/templates/_header.html
+++ b/hologram/templates/_header.html
@@ -7,11 +7,18 @@
 <title><% if title %><%= title %> | <% end %><%= @config['styleguide_name'] %></title>
 <link rel="stylesheet" href="./css/styles.min.css">
 <link rel="stylesheet" href="./assets/styleguide.css">
+<link rel="shortcut icon" href="./assets/favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="icon" href="./assets/favicon.ico" type="image/vnd.microsoft.icon">
 <meta name="robots" content="noindex,nofollow">
-<body>
+<body class="sg-body">
 
 <header class="sg-header">
-  <h1 class="sg-name"><a href="./"><%= @config['styleguide_name'] %></a></h1>
+  <h1 class="sg-name">
+    <a href="./">
+        <img src="./assets/logo.svg" width="20" height="20" alt="">
+        <%= @config['styleguide_name'] %>
+    </a>
+  </h1>
   <ul class="sg-nav">
     <% @config['categories'].each do |slug, name| %>
     <li<% if title == slug %> class="current"<% end %>><a href="./<%= slug %>.html"><%= name %></a></li>
