--- a/hologram/assets/styleguide.css
+++ b/hologram/assets/styleguide.css
@@ -59,7 +59,7 @@
 }
 .sg-nav > li.current:before {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     display: block;
     content: '';
@@ -83,7 +83,8 @@
     position: fixed;
     top: 70px;
     width: 240px;
-    height: 100%;
+    height: 90%;
+    height: calc(100% - 70px);
     background: #393939;
     z-index: 100;
     overflow-y: scroll;
@@ -120,7 +121,7 @@
     font-size: 28px;
     font-weight: bold;
     padding: 90px 0 10px;
-    margin-top: -30px;
+    margin-top: -40px;
     margin-bottom: 20px;
     border-bottom: 1px solid #ccc;
 }
@@ -208,7 +209,7 @@
     padding: 20px;
     overflow: auto;
     font-family: Consolas, 'Liberation Mono', Courier, monospace;
-    background-color: rgba(0, 0, 0, .1);
+    background-color: rgba(0, 0, 0, .07);
     font-size: 13px;
     border-radius: 5px;
     color: #333;
@@ -220,7 +221,7 @@
     display: inline-block;
     font-family: Consolas, 'Liberation Mono', Courier, monospace;
     font-size: 13px;
-    background-color: rgba(0, 0, 0, .1);
+    background-color: rgba(0, 0, 0, .07);
     position: relative;
     top: -2px;
     border-radius: 3px;
@@ -240,11 +241,11 @@
 
 
 .sg-contents .example {
-    margin: 2em 0 0;
+    margin-top: 30px;
     padding: 30px;
-    border: 1px solid #666;
+    border: 1px solid #e6e6e6;
+    border-bottom: none;
 }
-
 .sg-contents .codeblock {
     margin-bottom: 40px;
 }
@@ -253,20 +254,26 @@
     border-radius: 0 0 5px 5px;
 }
 
+.sg-colors {
+    display: flex;
+    flex-wrap: wrap;
+}
 .sg-color {
-    border: 1px solid #666;
+    width: 23%;
+    margin-left: 2.666%;
+    border: 1px solid #e6e6e6;
     margin-top: 20px;
-    padding-bottom: 8px;
 }
-
-.sg-color_tip {
+.sg-color:nth-child(4n + 1) {
+    margin-left: 0;
+}
+.sg-color_sample {
     width: 100%;
-    height: 100px;
-    margin-bottom: 10px;
+    height: 80px;
 }
-
-.sg-color_text {
-    padding: 0 15px 5px;
+.sg-color_txt {
+    padding: 15px;
+    line-height: 1.6;
 }
 
 
