--- a/dev/inc/_common_header.ejs
+++ b/dev/inc/_common_header.ejs
@@ -46,8 +46,11 @@ if ((navigator.userAgent.indexOf('iPhone') > 0 && navigator.userAgent.indexOf('i
 
 <body>
 
-<div id="wrapper">
+<div id="wrapper" class="l-wrapper">
 
 <header class="l-header">
 ヘッダー
 </header>
+
+<div class="l-contents">
+
