--- a/dev/assets/scss/module/_grid.scss
+++ b/dev/assets/scss/module/_grid.scss
@@ -1,4 +1,7 @@
-
+$gutter-xs : 16px;
+$gutter-sm : 16px;
+$gutter-md : 24px;
+$gutter-lg : 32px;
 
 .l-grid {
     display: flex;
@@ -10,62 +13,62 @@
 // グリッド幅の設定
 // ------------------------------------------
 
-.col-xs-1 { width: 8.333%; }
-.col-xs-2 { width: 16.666%; }
-.col-xs-3 { width: 25%; }
-.col-xs-4 { width: 33.333%; }
-.col-xs-5 { width: 41.666%; }
-.col-xs-6 { width: 50%; }
-.col-xs-7 { width: 58.333%; }
-.col-xs-8 { width: 66.666%; }
-.col-xs-9 { width: 75%; }
-.col-xs-10 { width: 83.333%; }
-.col-xs-11 { width: 91.666%; }
-.col-xs-12 { width: 100%; }
+.col-xs-1 { width: calc(8.333% - #{$gutter-xs} ); }
+.col-xs-2 { width: calc(16.666% - #{$gutter-xs} ); }
+.col-xs-3 { width: calc(25% - #{$gutter-xs} ); }
+.col-xs-4 { width: calc(33.333% - #{$gutter-xs} ); }
+.col-xs-5 { width: calc(41.666% - #{$gutter-xs} ); }
+.col-xs-6 { width: calc(50% - #{$gutter-xs} ); }
+.col-xs-7 { width: calc(58.333% - #{$gutter-xs} ); }
+.col-xs-8 { width: calc(66.666% - #{$gutter-xs} ); }
+.col-xs-9 { width: calc(75% - #{$gutter-xs} ); }
+.col-xs-10 { width: calc(83.333% - #{$gutter-xs} ); }
+.col-xs-11 { width: calc(91.666% - #{$gutter-xs} ); }
+.col-xs-12 { width: calc(100% - #{$gutter-xs} ); }
 
-@media print, screen and (min-width: $sm-min) {
-.col-sm-1 { width: 8.333%; }
-.col-sm-2 { width: 16.666%; }
-.col-sm-3 { width: 25%; }
-.col-sm-4 { width: 33.333%; }
-.col-sm-5 { width: 41.666%; }
-.col-sm-6 { width: 50%; }
-.col-sm-7 { width: 58.333%; }
-.col-sm-8 { width: 66.666%; }
-.col-sm-9 { width: 75%; }
-.col-sm-10 { width: 83.333%; }
-.col-sm-11 { width: 91.666%; }
-.col-sm-12 { width: 100%; }
+@include mq(smMin) {
+.col-sm-1 { width: calc(8.333% - #{$gutter-sm} ); }
+.col-sm-2 { width: calc(16.666% - #{$gutter-sm} ); }
+.col-sm-3 { width: calc(25% - #{$gutter-sm} ); }
+.col-sm-4 { width: calc(33.333% - #{$gutter-sm} ); }
+.col-sm-5 { width: calc(41.666% - #{$gutter-sm} ); }
+.col-sm-6 { width: calc(50% - #{$gutter-sm} ); }
+.col-sm-7 { width: calc(58.333% - #{$gutter-sm} ); }
+.col-sm-8 { width: calc(66.666% - #{$gutter-sm} ); }
+.col-sm-9 { width: calc(75% - #{$gutter-sm} ); }
+.col-sm-10 { width: calc(83.333% - #{$gutter-sm} ); }
+.col-sm-11 { width: calc(91.666% - #{$gutter-sm} ); }
+.col-sm-12 { width: calc(100% - #{$gutter-sm} ); }
 }
 
-@media print, screen and (min-width: $md-min) {
-.col-md-1 { width: 8.333%; }
-.col-md-2 { width: 16.666%; }
-.col-md-3 { width: 25%; }
-.col-md-4 { width: 33.333%; }
-.col-md-5 { width: 41.666%; }
-.col-md-6 { width: 50%; }
-.col-md-7 { width: 58.333%; }
-.col-md-8 { width: 66.666%; }
-.col-md-9 { width: 75%; }
-.col-md-10 { width: 83.333%; }
-.col-md-11 { width: 91.666%; }
-.col-md-12 { width: 100%; }
+@include mq(mdMin) {
+.col-md-1 { width: calc(8.333% - #{$gutter-md} ); }
+.col-md-2 { width: calc(16.666% - #{$gutter-md} ); }
+.col-md-3 { width: calc(25% - #{$gutter-md} ); }
+.col-md-4 { width: calc(33.333% - #{$gutter-md} ); }
+.col-md-5 { width: calc(41.666% - #{$gutter-md} ); }
+.col-md-6 { width: calc(50% - #{$gutter-md} ); }
+.col-md-7 { width: calc(58.333% - #{$gutter-md} ); }
+.col-md-8 { width: calc(66.666% - #{$gutter-md} ); }
+.col-md-9 { width: calc(75% - #{$gutter-md} ); }
+.col-md-10 { width: calc(83.333% - #{$gutter-md} ); }
+.col-md-11 { width: calc(91.666% - #{$gutter-md} ); }
+.col-md-12 { width: calc(100% - #{$gutter-md} ); }
 }
 
-@media print, screen and (min-width: $lg-min) {
-.col-lg-1 { width: 8.333%; }
-.col-lg-2 { width: 16.666%; }
-.col-lg-3 { width: 25%; }
-.col-lg-4 { width: 33.333%; }
-.col-lg-5 { width: 41.666%; }
-.col-lg-6 { width: 50%; }
-.col-lg-7 { width: 58.333%; }
-.col-lg-8 { width: 66.666%; }
-.col-lg-9 { width: 75%; }
-.col-lg-10 { width: 83.333%; }
-.col-lg-11 { width: 91.666%; }
-.col-lg-12 { width: 100%; }
+@include mq(lgMin) {
+.col-lg-1 { width: calc(8.333% - #{$gutter-lg} ); }
+.col-lg-2 { width: calc(16.666% - #{$gutter-lg} ); }
+.col-lg-3 { width: calc(25% - #{$gutter-lg} ); }
+.col-lg-4 { width: calc(33.333% - #{$gutter-lg} ); }
+.col-lg-5 { width: calc(41.666% - #{$gutter-lg} ); }
+.col-lg-6 { width: calc(50% - #{$gutter-lg} ); }
+.col-lg-7 { width: calc(58.333% - #{$gutter-lg} ); }
+.col-lg-8 { width: calc(66.666% - #{$gutter-lg} ); }
+.col-lg-9 { width: calc(75% - #{$gutter-lg} ); }
+.col-lg-10 { width: calc(83.333% - #{$gutter-lg} ); }
+.col-lg-11 { width: calc(91.666% - #{$gutter-lg} ); }
+.col-lg-12 { width: calc(100% - #{$gutter-lg} ); }
 }
 
 
@@ -74,52 +77,53 @@
 // ------------------------------------------
 
 .l-grid {
-    margin-left: -8px;
-    margin-right: -8px;
-}
-.l-grid_col {
-    padding-left: 8px;
-    padding-right: 8px;
-}
-
-// @media print, screen and (min-width: $sm-min) {
-//     .l-grid {
-//         margin-left: -15px;
-//         margin-right: -15px;
-//     }
-//     .l-grid_col {
-//         padding-left: 15px;
-//         padding-right: 15px;
-//     }
-// }
-
-@media print, screen and (min-width: $md-min) {
-    .l-grid {
-        margin-left: -12px;
-        margin-right: -12px;
-    }
-    .l-grid_col {
-        padding-left: 12px;
-        padding-right: 12px;
+    margin-left: - ( $gutter-xs / 2 );
+    margin-right: - ( $gutter-xs / 2 );
+    &_col {
+        margin-left: $gutter-xs / 2;
+        margin-right: $gutter-xs / 2;
+        background-color: #eee;
+        margin-top: 20px;
     }
 }
 
-@media print, screen and (min-width: $lg-min) {
-    .l-grid {
-        margin-left: -15px;
-        margin-right: -15px;
+@include mq(smMin) {
+.l-grid {
+    margin-left: - ( $gutter-sm / 2 );
+    margin-right: - ( $gutter-sm / 2 );
+    &_col {
+        margin-left: $gutter-sm / 2;
+        margin-right: $gutter-sm / 2;
     }
-    .l-grid_col {
-        padding-left: 15px;
-        padding-right: 15px;
+}
+}
+
+@include mq(mdMin) {
+.l-grid {
+    margin-left: - ( $gutter-md / 2 );
+    margin-right: - ( $gutter-md / 2 );
+    &_col {
+        margin-left: $gutter-md / 2;
+        margin-right: $gutter-md / 2;
     }
+}
+}
+
+@include mq(lgMin) {
+.l-grid {
+    margin-left: - ( $gutter-lg / 2 );
+    margin-right: - ( $gutter-lg / 2 );
+    &_col {
+        margin-left: $gutter-lg / 2;
+        margin-right: $gutter-lg / 2;
+    }
+}
 }
 
 
 // ------------------------------------------
 // 上下の余白の設定
 // ------------------------------------------
-
 
 .grid-xs-1col > .l-grid_col:nth-child(n+2),
 .grid-xs-2col > .l-grid_col:nth-child(n+3),
@@ -133,10 +137,10 @@
 .grid-xs-10col > .l-grid_col:nth-child(n+11),
 .grid-xs-11col > .l-grid_col:nth-child(n+12),
 .grid-xs-12col > .l-grid_col:nth-child(n+13) {
-    margin-top: 20px;
+    margin-top: $gutter-xs;
 }
 
-@media print, screen and (min-width: $sm-min) {
+@include mq(smMin) {
     .grid-sm-1col > .l-grid_col:nth-child(-n+2),
     .grid-sm-2col > .l-grid_col:nth-child(-n+3),
     .grid-sm-3col > .l-grid_col:nth-child(-n+4),
@@ -163,11 +167,11 @@
     .grid-sm-10col > .l-grid_col:nth-child(n+11),
     .grid-sm-11col > .l-grid_col:nth-child(n+12),
     .grid-sm-12col > .l-grid_col:nth-child(n+13) {
-        margin-top: 20px;
+        margin-top: $gutter-sm;
     }
 }
 
-@media print, screen and (min-width: $md-min) {
+@include mq(mdMin) {
     .grid-md-1col > .l-grid_col:nth-child(-n+2),
     .grid-md-2col > .l-grid_col:nth-child(-n+3),
     .grid-md-3col > .l-grid_col:nth-child(-n+4),
@@ -194,11 +198,11 @@
     .grid-md-10col > .l-grid_col:nth-child(n+11),
     .grid-md-11col > .l-grid_col:nth-child(n+12),
     .grid-md-12col > .l-grid_col:nth-child(n+13) {
-        margin-top: 40px;
+        margin-top: $gutter-md;
     }
 }
 
-@media print, screen and (min-width: $lg-min) {
+@include mq(lgMin) {
     .grid-lg-1col > .l-grid_col:nth-child(-n+2),
     .grid-lg-2col > .l-grid_col:nth-child(-n+3),
     .grid-lg-3col > .l-grid_col:nth-child(-n+4),
@@ -225,25 +229,6 @@
     .grid-lg-10col > .l-grid_col:nth-child(n+11),
     .grid-lg-11col > .l-grid_col:nth-child(n+12),
     .grid-lg-12col > .l-grid_col:nth-child(n+13) {
-        margin-top: 40px;
+        margin-top: $gutter-lg;
     }
 }
-
-// ------------------------------------------
-// その他
-// ------------------------------------------
-
-.l-grid_col img {
-    width: 100%;
-    max-width: auto;
-}
-
-.l-grid_col.img-center {
-    text-align: center;
-    img {
-        width: auto;
-        max-width: 100%;
-    }
-}
-
-
